--- a/app/views/advertisements/index.html.slim
+++ b/app/views/advertisements/index.html.slim
@@ -16,16 +16,20 @@
       i.fa.fa-list
       '
       == bb_tags('Найдено [b]search_entries[/b]', @bbtags)
+      = render 'advertisements/search_results'
   - else
     - if @root_section.present?
       - if @root_section.h1.present?
         h1
           == bb_tags(@root_section.h1, @bbtags)
-      - if @root_section.p.present?
-        p
-          == bb_tags(@root_section.p, @bbtags)
+      p
+        == bb_tags(@root_section.p, @bbtags)
+        = render 'advertisements/search_results'
+    - else
+      p
+        = render 'advertisements/search_results'
 
-  = render 'advertisements/search_results'
+
   - if params[:advertisement].empty?
     - if @root_section.present?
       - if @root_section.h2.present?
