--- a/app/views/advertisements/_search_form.html.slim
+++ b/app/views/advertisements/_search_form.html.slim
@@ -59,8 +59,12 @@
             '
             i.caret
           - if @root_section.present?
-            - Section.child_for(@root_section.location_id).not_empty.each do |section|
-              = link_to section.title, section.url, class: 'button btn btn-default location_hide_action'
+            - if @root_section.location_id.present?
+              - Section.child_for(@root_section.location_id).not_empty.where.not(id: @root_section.id).each do |section|
+                = link_to section.title, section.url, class: 'button btn btn-default location_hide_action'
+            - else
+              - Section.where(location_id: nil).where.not(id: @root_section.id).not_empty.each do |section|
+                = link_to section.title, section.url, class: 'button btn btn-default location_hide_action'
     .row
       .col-md-10.col-sm-9.col-xs-12.additional_search_params_container_action
         = render 'advertisements/additional_search_params'
