--- a/app/views/shared/_header.html.slim
+++ b/app/views/shared/_header.html.slim
@@ -67,6 +67,9 @@
                         i.fa.fa-sign-in
                         '
                         | Войти
+                      '
+                      = link_to "Забыли пароль?", new_password_path(resource_name)
+
 
       ul.nav.navbar-nav.navbar-left
         li.nav.navbar-nav
