--- a/app/views/advertisements/_form.html.slim
+++ b/app/views/advertisements/_form.html.slim
@@ -20,7 +20,7 @@ h1
         .form-group
           label.col-sm-3.control-label for="offer_type" Вид сделки
           .col-sm-9
-            label
+            label.control-label
               i.fa.fa-share.fa-lg
               '
               | предложение
