--- a/app/views/advertisements/_search_results.html.slim
+++ b/app/views/advertisements/_search_results.html.slim
@@ -50,7 +50,7 @@
               '
               = adv.name
             '
-            a.btn.btn-default.btn-xs.HideAdvPhone
+            span.btn.btn-default.btn-xs.HideAdvPhone
               = adv.phone
 
 - else
