--- a/app/views/devise/passwords/new.html.slim
+++ b/app/views/devise/passwords/new.html.slim
@@ -19,5 +19,4 @@ h1
           = f.button class: 'btn btn-primary btn-lg' do
             i.fa.fa-send
             '
-            | Войти
-    = render "devise/shared/links"
+            | Выслать инструкции
