--- a/app/views/advertisements/_search_form.html.slim
+++ b/app/views/advertisements/_search_form.html.slim
@@ -1,5 +1,5 @@
 .well.well-sm
-  = form_tag root_path, method: :get, class: 'form form-inline', role:'form'
+  = form_tag root_path, method: :get, class: 'form form-inline withoutBootstrapValidator', role:'form'
     /What a hell with this css??
     .row.col-xs-12
       .form-group
@@ -9,7 +9,7 @@
           | предложение
         '
         .btn-group data-toggle="buttons"
-           - [:sale, :for_rent, :day].each do |offer|
+          - [:sale, :for_rent, :day].each do |offer|
             - active = ((@section.present? && @section.url != '/' ? [@section.attributes[:offer_type.to_s].to_s] : params[:advertisement][:offer_type]) || []).include?(AdvEnums::OFFER_TYPES.index(offer).to_s)
             label.btn.btn-default.click_additional_search_params_action class="#{'active' if active}"
               input type="checkbox" name="advertisement[offer_type][]" value="#{AdvEnums::OFFER_TYPES.index(offer)}" checked=active = t("advertisement.offer.#{offer}")
@@ -58,13 +58,10 @@
             | местоположение
             '
             i.caret
-          - if @root_section.present?
-            - if @root_section.location_id.present?
-              - Section.child_for(@root_section.location_id).not_empty.where.not(id: @root_section.id).each do |section|
-                = link_to section.title, section.url, class: 'button btn btn-default location_hide_action'
-            - else
-              - Section.where(location_id: nil).where.not(id: @root_section.id).not_empty.each do |section|
-                = link_to section.title, section.url, class: 'button btn btn-default location_hide_action'
+
+          - if @hidden_sections.present?
+            - @hidden_sections.each do |section|
+              = link_to section.title, section.url, class: 'button btn btn-default location_hide_action'
     .row
       .col-md-10.col-sm-9.col-xs-12.additional_search_params_container_action
         = render 'advertisements/additional_search_params'
