--- a/app/views/shared/_pagination.html.slim
+++ b/app/views/shared/_pagination.html.slim
@@ -2,13 +2,14 @@
   .row
     .col-xs-12
       ul.pagination.pull-left
+        - url_params.delete(:page)
         - if current_page > 1
           li
             a href=url_path.call(url_params.merge!(current_page - 1 != 1 ? {:page => current_page - 1} : {}))
               | &laquo;
         - (1..pages).each do |page|
           li class="#{'disabled' if page == current_page}"
-            a href=url_path.call(url_params.merge!(page != 1 ? {:page => page} : {}))
+            a href=(page == current_page ? '#': url_path.call(url_params.merge!(page != 1 ? {:page => page} : {})))
               = page
         -if current_page < pages
           li
