--- a/app/views/advertisements/_search_form.html.slim
+++ b/app/views/advertisements/_search_form.html.slim
@@ -49,18 +49,25 @@
             label.btn.btn-default.click_additional_search_params_action class="#{'active' if active}"
               input type="checkbox" name="advertisement[category][]" value="#{AdvEnums::CATEGORIES.index(category)}" checked=active = t("advertisement.category.#{category}")
     - if @hidden_sections.present?
-      .row.col-xs-12.control_hide_action
-        - @hidden_sections.group_by { |section| section.offer_type }.each_pair do |key, value|
-          label.control-label
-            = I18n.t("activerecord.attributes.section.enum_title.#{key}")
-          '
-          - value.each do |section|
-            .form-group
-            - if section.category
-              = link_to I18n.t("activerecord.attributes.section.enum_title.#{section.category}"), section.url, class: 'btn btn-default btn-xs'
-            - else
-              = link_to I18n.t("activerecord.attributes.section.enum_title.#{section.property_type}"), section.url, class: 'btn btn-default btn-xs'
-            '
+      - @hidden_sections.group_by { |section| section.location_id }.sort_by{ |key, _| @hidden_locations.index(key) }.to_h.each_pair do |_, group|
+        - if group.present?
+          .row.col-xs-12.control_hide_action
+            - group.group_by { |section| section.offer_type }.each_pair do |key, value|
+              label.control-label
+                - if key
+                  = I18n.t("activerecord.attributes.section.enum_title.#{key}")
+                - else
+                  | вся
+              '
+              - value.each do |section|
+                .form-group
+                - if section.category
+                  = link_to I18n.t("activerecord.attributes.section.enum_title.#{section.category}"), section.url, class: 'btn btn-default btn-xs'
+                - elsif section.property_type
+                  = link_to I18n.t("activerecord.attributes.section.enum_title.#{section.property_type}"), section.url, class: 'btn btn-default btn-xs'
+                - else
+                  = link_to 'недвижимость', section.url, class: 'btn btn-default btn-xs'
+                '
 
     .row.col-xs-12.form-group.control_show_action.hidden
       .control_remove_action
@@ -78,7 +85,7 @@
     - if @hidden_location_sections.present?
       .row.col-xs-12.control_hide_action
         label.control-label
-          | местоположение
+          | недвижимость
           '
         - @hidden_location_sections.each do |section|
           .form-group
