--- a/app/views/advertisements/_search_form.html.slim
+++ b/app/views/advertisements/_search_form.html.slim
@@ -118,7 +118,7 @@
           input.text-input.range_date_picker_action name="advertisement[date_interval]" placeholder='▼за всё время' type="text" value=params[:advertisement][:date_interval].presence
 
       .col-md-2.col-sm-3.col-xs-12
-        button.btn.btn-primary.btn-lg.pull-left type="submit"
+        button.btn.btn-primary.btn-lg.btn-block type="submit"
           i.fa.fa-search.fa-lg
           '
           | Найти
