--- a/app/views/advertisements/show.html.slim
+++ b/app/views/advertisements/show.html.slim
@@ -21,7 +21,7 @@ h1
     .col-md-9.col-lg-7
       - if @photos.present?
         .clearfix style="margin-bottom: 15px"
-          = image_tag @photos.first.advertisement_photo, class: 'first_photo_img_action img-responsive search-photo-size', style: "height: 400px;"
+          = image_tag @photos.first.advertisement_photo(:medium), class: 'first_photo_img_action img-responsive search-photo-size', style: "height: 400px;"
           p.text-center.first_photo_comment_action
             = @photos.first.comment
           - @photos.each do |photo|
