--- a/app/views/shared/_pagination.html.slim
+++ b/app/views/shared/_pagination.html.slim
@@ -9,8 +9,12 @@
               | &laquo;
         - (1..pages).each do |page|
           li class="#{'disabled' if page == current_page}"
-            a href=(page == current_page ? '#' : url_path.call(url_params.merge!(page != 1 ? {:page => page} : {})))
-              = page
+            -if page == current_page
+              span
+                = page
+            - else
+              a href=(url_path.call(url_params.merge!(page != 1 ? {:page => page} : {})))
+                = page
         -if current_page < pages
           li
             a href=url_path.call(url_params.merge!(current_page + 1 != 1 ? {:page => current_page + 1} : {}))
