--- a/app/assets/stylesheets/common.css.scss
+++ b/app/assets/stylesheets/common.css.scss
@@ -52,7 +52,13 @@ select.w-3{
   width: 70px;
 }
 
-h1, h2 {
+
+h1 {
+  margin-top: 0px;
+  font-size: 1.8em;
+}
+
+h2 {
   margin-top: 0px;
   font-size: 1.6em;
 }
