--- a/app/views/advertisements/_search_results.html.slim
+++ b/app/views/advertisements/_search_results.html.slim
@@ -7,7 +7,7 @@
             span.col-md-12.col-md-2.col-sm-3
               time.smart_time datetime=((adv.created_at >= adv.updated_at) ? adv.created_at : adv.updated_at) time_zone=3
             span.col-md-12.col-sm-12
-              - if !adv.expired?
+              - if adv.expired?
                 i.fa.fa-pause.fa-lg
               '
               -if can? :manage, adv
